# tailscale-api

./: Dockerfile  PYPI_README.md  README.md  check-devices.py  compose.yaml  pyproject.toml  requirements.in  requirements.txt  tailscale-api.http  tailscale.py
.github/: dependabot.yaml
.github/workflows/: build-container-image.yaml  check-devices.yaml  hygiene.yaml  publish.yaml  ruff.yaml
ci/: check-devices.sh  gen.py
examples/: check-devices.py
src/tailscale_api/: __init__.py  models.py
