[project]
name = "tailscale-api"
version = "2025.0"
description = "Tools for working with the Tailscale API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
]

[build-system]
build-backend = "uv_build"
requires = ["uv-build>=0.9.2,<0.10.0"]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "uv-build>=0.9.2",
]

[tool.ruff.lint]
select = ["ANN", "E", "F", "FURB", "I", "PERF", "RUF", "S", "UP"]
