[project]
name = "tailscale-api"
version = "2025.1"
description = "Tools for working with the Tailscale API"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "httpx>=0.28.1",
]

[project.urls]
"Homepage" = "https://github.com/williamjacksn/tailscale-api"
"Issues" = "https://github.com/williamjacksn/tailscale-api/issues"

[build-system]
build-backend = "uv_build"
requires = ["uv-build>=0.9.3,<0.10.0"]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "ty>=0.0.1a33",
    "uv-build>=0.9.3",
]

[tool.ruff.lint]
select = ["ANN", "E", "F", "FURB", "I", "PERF", "RUF", "S", "UP"]
